[gd_scene load_steps=8 format=3 uid="uid://d060x50cukg42"]

[ext_resource type="Texture2D" uid="uid://bwe2wd2wi1pq" path="res://UI/ResetButton/dreamcatcher.png" id="1_0s1ep"]
[ext_resource type="FontFile" uid="uid://bydg4xalbmiwi" path="res://Art/Font/Pixellari.ttf" id="1_kly8c"]
[ext_resource type="Texture2D" uid="uid://ckhbba1ys4u4q" path="res://Art/widebutton.png" id="2_f46vp"]
[ext_resource type="Script" path="res://UI/LevelSelector/setting_button.gd" id="2_g4wk0"]
[ext_resource type="AudioStream" uid="uid://xhfx6pbq77ed" path="res://UI/UI Music/Button_Press_1.wav" id="5_mnvto"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wkus8"]
texture = ExtResource("1_0s1ep")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cvq7f"]
texture = ExtResource("1_0s1ep")

[node name="Setting Button" type="Button" node_paths=PackedStringArray("ButtonPress")]
texture_filter = 1
offset_right = 44.0
offset_bottom = 46.0
theme_override_styles/normal = SubResource("StyleBoxTexture_wkus8")
theme_override_styles/hover = SubResource("StyleBoxTexture_cvq7f")
text = "   "
script = ExtResource("2_g4wk0")
ButtonPress = NodePath("Music/ButtonPress")

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
z_index = 4
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -882.813
offset_top = -234.115
offset_right = 264.187
offset_bottom = 415.885
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 18
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_kly8c")
theme_override_font_sizes/font_size = 34
text = "Play"
flat = true

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer/Play"]
z_index = -1
position = Vector2(61, 20)
scale = Vector2(0.96, 0.679995)
texture = ExtResource("2_f46vp")

[node name="Seperator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Options" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_kly8c")
theme_override_font_sizes/font_size = 34
text = "Options"
flat = true

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer/Options"]
z_index = -1
position = Vector2(61, 20)
scale = Vector2(0.96, 0.679995)
texture = ExtResource("2_f46vp")

[node name="Seperator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Quit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_kly8c")
theme_override_font_sizes/font_size = 34
text = "Exit"
flat = true

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer/Quit"]
z_index = -1
position = Vector2(61, 20)
scale = Vector2(0.96, 0.679995)
texture = ExtResource("2_f46vp")

[node name="OptionsNodeSuperDuper" type="Node2D" parent="."]
visible = false
z_index = 6
position = Vector2(-648, -87)
scale = Vector2(0.61, 0.61)

[node name="ColorRect" type="ColorRect" parent="OptionsNodeSuperDuper"]
offset_left = 378.0
offset_top = 224.0
offset_right = 392.0
offset_bottom = 235.0
scale = Vector2(29.9309, 16.2)
color = Color(0.294118, 0.203922, 0.301961, 1)

[node name="Label" type="Label" parent="OptionsNodeSuperDuper"]
texture_filter = 1
offset_left = 442.0
offset_top = 246.0
offset_right = 738.0
offset_bottom = 310.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("1_kly8c")
theme_override_font_sizes/font_size = 39
text = "Music Volume"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="OptionsNodeSuperDuper"]
offset_left = 542.0
offset_top = 324.0
offset_right = 651.0
offset_bottom = 340.0
min_value = -80.0
max_value = 0.0

[node name="BackOption" type="Button" parent="OptionsNodeSuperDuper"]
texture_filter = 1
custom_minimum_size = Vector2(120, 32)
offset_left = 392.0
offset_top = 355.0
offset_right = 512.0
offset_bottom = 387.0
theme_override_fonts/font = ExtResource("1_kly8c")
theme_override_font_sizes/font_size = 21
text = "Back"

[node name="Music" type="Node2D" parent="."]

[node name="ButtonPress" type="AudioStreamPlayer2D" parent="Music"]
stream = ExtResource("5_mnvto")

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="OptionsNodeSuperDuper/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="OptionsNodeSuperDuper/BackOption" to="." method="_on_back_option_pressed"]
